# cvpicam

./: CMakeLists.txt  LICENSE  README.md
include/: cvpicam.h
src/: cvpicam.cpp
tests/: simple.cpp
